--- a/reviews.Rmd
+++ b/reviews.Rmd
@@ -181,12 +181,12 @@ This makes it difficult to guide a priori decisions in planning a study, after a
 This implies that for a priori balancing Type I and Type II error rate, a researcher must assign a priori probabilities to, for example, the size of an effect.
 Since such a move not in line with frequentist rationale there is no guidelines available on how to do this.
 Third, we would argue that severity considerations assume full information about how the evidence came about and hence imply axiomatically the need for perfect preregistration.
-This comes down to frequentist understanding of probability as the outcome of a well defined random experiments.
+This comes down to frequentist understanding of probability as the outcome of a well defined random experiment.
 When judging a particular study, a frequentist, and hence a severe tester, may not assign probability to the event that the researchers did, for example, p-hack.
 The lack of knowledge on the readers side does not turn the p hacking into a random event of which we can calculate the long run frequency aka frequentist probability.
 A severe test, hence, must assume that they know the Type I and Type II error rate precisely.
 Full transparency, is hence assumed, and we can not imagine many ways except preregistration that get close to this ideal.
-This assumptions also makes it difficult to deal with less than perfect preregistrations and post-hoc changes without appealing to principles outside the core philosophy of severity.
+This assumptions also makes it hard to deal with less-than-perfect preregistrations and post-hoc changes without relying to principles outside the core philosophy of severity.
 
 > However, there also are communalities, like the strong emphasis on counterfactual consideration (imagining the hypothesis was false), and there are even proposals to reconcile Bayesian and severity considerations [@vandongenBayesianPerspectiveSeverity2023].
 
@@ -208,7 +208,7 @@ I think this argument is in the right direction, but it is not fully developed.
 I was somewhat disappointed not to see a discussion of my own paper on a conceptual analysis of the value of preregistration, as I had a similar goal as the authors when I wrote my paper, and my arguments are in the same direction, but dare I say, slightly better developed.
 :::
 
-We find ourselves in a curios position, that perhaps may be summarised as "doing the right thing, for the wrong reasons", i.e., we agree with Laken's conclusions about preregistration but we disagree how to come to these conclusions.
+Importantly, we agree with Laken's conclusions about preregistration but we fundamentally disagree with how to arrive at these conclusions.
 We take a Bayesian/inductionist view, whereas Lakens takes a frequentist/anti-inductionist view, agreeing on the end result but disagreeing on everything that comes before.
 While we find it important that readers are aware, how anti-inductionist deal with preregistration, this paper was not meant as an exercise to compare Bayesian justification for preregistration with its frequentist counterpart.
 
@@ -328,8 +328,10 @@ If the error rate is not controlled, I do not know how severely a claim has been
 The authors seem happy with the fact that preregistration reduces the Type 1 error rate even in an exploratory study.
 :::
 
-No, we are happy with low uncertainty about theoretical risk.
-An exploratory study is in our framework, signified by low theoretical risk (high Type 1 error rate).
+No. 
+As we argue in our manuscript, we are happy when uncertainty about theoretical risk is low.
+A typical exploratory study is in our framework characterized by low theoretical risk (high Type 1 error rate).
+Reducing uncertainty about its theoretical risk is still useful for scientific progress, in order for us to be better able to judge its theoretical risk (for example, the theoretical risk may low but higher than another exploratory study).
 
 :::reviewer
 But I am not. Only claims with a known error rate are useful in science.
