--- a/reviews.Rmd
+++ b/reviews.Rmd
@@ -23,7 +23,7 @@ We are grateful for his comments and revised the manuscript in response to his s
 
 Due to a technical issue, the citations in the manuscript excerpts in this letter do not work correctly (they are correct in the manuscript, however).
 
-# Daniel Lakens
+# Reviewer 1: Daniel Lakens
 
 Lakens and our own positions on preregistration built upon two long standing traditions in philosophy of science, namely inductionist and anti-inductionist, that differ fundamentally in their core assumptions.
 
