--- a/reviews.Rmd
+++ b/reviews.Rmd
@@ -18,12 +18,19 @@ All changes of the manuscript since this review can be viewed on GitHub:
 
 [https://github.com/aaronpeikert/bayes-prereg/compare/v0.2.0...main](https://github.com/aaronpeikert/bayes-prereg/compare/v0.2.0...main#diff-a9a4aad3fa8c9c10c5404b632bc3a01a25d2d8430eb932bc35c76769963e4b70)
 
+We have updated the preprint:
+
+<https://osf.io/preprints/psyarxiv/cs8wb>
+
+ OSF (<https://osf.io/nc5g8/>) and Zenodo (<https://doi.org/10.5281/zenodo.7648471>) are mirroring our GitHub repo (<https://github.com/aaronpeikert/bayes-prereg>).
+
 Concerning Daniel Laken's review, we took the liberty to provide a high level summary of his main points because they are repeated across different subdiscussions throughout his letter.
 We are grateful for his comments and revised the manuscript in response to his summary of suggestions (RC \@ref(pt:change-start) to RC \@ref(pt:change-end)).
 
 Due to a technical issue, the citations in the manuscript excerpts in this letter do not work correctly (they are correct in the manuscript, however).
 
 # Reviewer 1: Daniel Lakens
+
 We begin with a summarizing our understanding of Daniel Lakens philosophical position, his main points of criticisim and our general take on how to address these issues.
 Thereafter, we will provide point-by-point responses in the usual style of response letters.
 Lakens and our own positions on preregistration fundamentally differ.
